add solution for exercice in 6.3 make sure copies of boolean objects are new objects